--- a/.htaccess
+++ b/.htaccess
@@ -3,5 +3,5 @@ RewriteEngine
 RewriteBase /bextlan/veflix/
 RewriteCond %{SCRIPT_FILENAME} !-d
 RewriteCond %{SCRIPT_FILENAME} !-f
-Rewrite ^(.*)$ index.php?r=$1 [L]
+RewriteRule ^(.*)$ index.php?r=$1 [L]
 
